# robot_template_Completed

./: .gitignore  README.md  pyproject.toml
POM/Keywords/Modules/: Buying_Steps.robot  Signin_Steps.robot  Utilitis.robot
POM/Keywords/Pages/: Cart.robot  Landing.robot  Signin.robot
POM/Locators/: Cart.py  Landing.py  Signin.py
Resources/DataSources/: Signin.json  UserData.json
Resources/Setup/: Enviorenment.robot
Resources/Variables/: Global.robot
Tests/ui/: SigninBuyProduct_TestSuite.robot
